[package]
name = "rusty-alarmidas"
version = "0.1.0"
authors = ["doubleO8 <wb008@hdm-stuttgart.de>"]
edition = "2018"
license = "GPL-2"
description = "rusty alarmidas components"
repository = "https://github.com/doubleO8/rusty-alarmidas"

[lib]
crate-type = ["cdylib", "rlib"]

#[features]
#default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
#console_error_panic_hook = { version = "0.1.7", optional = true }

#js-sys = "0.3.64"
web-sys = { version = "0.3.64", features = ["console"] }
serde-wasm-bindgen = "0.6.0"
serde = { version = "1.0.188", features = ["derive"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
lto = true

# Tell `rustc` to optimize for small code size.
#opt-level = "z"
